--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
               src="images/thumbs/01.jpg" alt=""></a>
           <h2>MUSIC FOCUS</h2>
-          <p>Music production team with extensive experience in composing and
+          <p>music production team with extensive experience in composing and
             editing soundtracks for films, audiovisuals, original scores and
             custom compositions for narrative media</p>
         </article>
@@ -65,7 +65,7 @@
 
               alt=""></a>
           <h2>THE STUDIO</h2>
-          <p>Our setup supports high-quality small-scale recordings, ideal for
+          <p>our setup supports high-quality small-scale recordings, ideal for
             capturing the nuances and character of vocals (lead, backing),
             speeches, voiceovers, guitars and air instruments</p>
         </article>
@@ -73,7 +73,7 @@
 
               src="images/thumbs/03.jpg" alt=""></a>
           <h2>SOUND PALETTE</h2>
-          <p>Versatile sound palette for Visual Media. Our music production
+          <p>versatile sound palette for Visual Media. Our music production
             embraces a broad and expressive range of sonic styles, carefully
             crafted to fit. We work across different genres</p>
         </article>
@@ -81,7 +81,7 @@
 
               alt=""></a>
           <h2>AUDIO TARGETS</h2>
-          <p>Whether it's music production, audio podcasts, branded content, or
+          <p>whether it's music production, audio podcasts, branded content, or
             any creative audio project, we deliver high-quality solutions with a
             keen ear for details</p>
         </article>
@@ -89,14 +89,14 @@
 
               src="images/thumbs/05.jpg" alt=""></a>
           <h2>INSTRUMENTS IN THE PLAY</h2>
-          <p>Hybrid/Organic instrumentation, including piano, strings, guitars,
+          <p>hybrid/Organic instrumentation, including piano, strings, guitars,
             flutes, hand percussion, pop sampling and groove hooks</p>
         </article>
         <article> <a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg"
 
               alt=""></a>
           <h2>VERSATILITY</h2>
-          <p>Acoustic and digital elements to create unique immersive
+          <p>acoustic and digital elements to create unique immersive
             soundtracks, whether your project calls for cinematic depth or
             minimalist tension</p>
         </article>
@@ -104,21 +104,21 @@
 
               alt=""></a>
           <h2>PROJECT GROWING</h2>
-          <p>Tailored compositions, adaptable approach, emotionally focused and
+          <p>tailored compositions, adaptable approach, emotionally focused and
             connected to the rhythm of the image, or your next pop hit</p>
         </article>
         <article> <a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg"
 
               alt=""></a>
           <h2>SERVICES</h2>
-          <p> We offer in-house capabilities for small recording sessions and
+          <p>we offer in-house capabilities for small recording sessions and
             provide end-to-end services including editing, mixing, and mastering</p>
         </article>
         <article> <a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg"
 
               alt=""></a>
           <h2>SKILL FACTORS</h2>
-          <p>Catchy melodies, modern beats, and accessible sound design to
+          <p>catchy melodies, modern beats, and accessible sound design to
             enhance brand identity, warm acoustic emotion or bright, engaging
             pop energy</p>
         </article>
@@ -126,21 +126,21 @@
 
               alt=""></a>
           <h2>MUSIC VISUALS</h2>
-          <p>Atmospherics, ideal for underscoring emotion, space or even subtle
+          <p>atmospherics, ideal for underscoring emotion, space or even subtle
             tension</p>
         </article>
         <article> <a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg"
 
               alt=""></a>
           <h2>ADVERTISING</h2>
-          <p>There is space for any kind of sonic idea, including jingles and
+          <p>there is space for any kind of sonic idea, including jingles and
             dedicated audio</p>
         </article>
         <article> <a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg"
 
               alt=""></a>
           <h2>AMBIENT / AMBIENTS</h2>
-          <p>Electronic soundscapes, textured synth layers, rhythmic pulses,
+          <p>electronic soundscapes, textured synth layers, rhythmic pulses,
             experimental tones and ambient captures</p>
         </article>
         <article> <a class="thumbnail" href="images/fulls/13.jpg"><img src="images/thumbs/13.jpg"
@@ -164,7 +164,7 @@
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
           <h2 style="color:Lightgreen; text-align: center;">@udioYlem</h2>
-          <p style="text-align: center;">Recent Docu-Film sountrack:</p>
+          <p style="text-align: center;">recent Docu-Film sountrack:</p>
           <h2 style="text-align: center;">AN INVISIBLE ENEMY</h2>
           <p style="text-align: center;">(Dir.: Riccardo Campagna, Federico
             Savonitto / Music: Renzo Fanutti, Paolo Corberi, Mirko Cisilino)</p>
@@ -200,7 +200,7 @@
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
-          <h2 style="color:Lightblue; text-align: center;">Our goal is the
+          <h2 style="color:Lightblue; text-align: center;">our goal is the
             quality, accessible on the spending side, with personalized offers</h2>
           <p style="text-align: center;"></p>
           <p style="text-align: center;"></p>
