--- a/ita_index.html
+++ b/ita_index.html
@@ -212,23 +212,24 @@
         <article> <a class="thumbnail" href="images/fulls/16.jpg"><img src="images/thumbs/16.jpg"
 
               alt=""></a>
-          <h2 style="text-align: center;">.</h2>
-          <h2 style="text-align: center;">__</h2>
-          <h2 style="text-align: center;">____</h2>
-          <h2 style="text-align: center;">______</h2>
-          <ul class="icons" style="text-align: center;">
-            <li><a href="player.html" class="icon fa-play-circle" title="player">
-                <p>Ascolta la selezione</p>
-                <span class="label">player</span></a></li>
-          </ul>
+          <h2 style="text-align: center;"></h2>
+          <h2 style="text-align: center;"></h2>
+          <h2 style="text-align: center;">contattaci, saremo lieti di andare
+            insieme all'obiettivo</h2>
+          <h2 style="text-align: center;"></h2>
           <p></p>
           <p></p>
           <ul class="icons" style="text-align: center;">
-            <li><a href="mailto:%20renzofanutti@gmail.com" class="icon fa-envelope"
+            <li><a href="player.html" class="icon fa-play-circle" title="player"
 
-                title="mail us and we'll get 2 u">
-                <p style="text-align: center;">Contattaci</p>
-                <span class="label">Email</span></a></li>
+                style="text-align: center;">
+                <p style="text-align: center;">ascolta</p>
+                <span class="label">email</span></a></li>
+            <li><a href="mailto:renzofanutti@gmail.com" class="icon fa-envelope"
+
+                title="contact us" style="text-align: center;">
+                <p style="text-align: center;">contact</p>
+                <span class="label">email</span></a></li>
           </ul>
         </article>
       </section>
