--- a/ita_index.html
+++ b/ita_index.html
@@ -59,7 +59,7 @@
 
               src="images/thumbs/01.jpg" alt=""></a>
           <h2>FOCUS MUSICALE</h2>
-          <p>Team di produzione musicale con una vasta esperienza nella
+          <p>team di produzione musicale con una vasta esperienza nella
             composizione di colonne sonore per film, documentari spaziando da
             brani originali, a composizioni personalizzate per media visivi</p>
         </article>
@@ -67,7 +67,7 @@
 
               alt=""></a>
           <h2>LO STUDIO</h2>
-          <p>Registrazioni di alta qualità su piccola scala, ideali per
+          <p>registrazioni di alta qualità su piccola scala, ideali per
             catturare le sfumature e il carattere di voci (soliste,
             accompagnamento), parlato, chitarre acustiche, elettriche e
             strumenti a fiato</p>
@@ -76,7 +76,7 @@
 
               src="images/thumbs/03.jpg" alt=""></a>
           <h2>IL SOUND</h2>
-          <p>Una tavolozza sonora versatile anche per i media visivi,
+          <p>una tavolozza sonora versatile anche per i media visivi,
             abbracciando diversi stili e sonorità per supportare la narrazione
             in tutte le sue forme e nei diversi generi musicali</p>
         </article>
@@ -84,7 +84,7 @@
 
               alt=""></a>
           <h2>TARGETS AUDIO</h2>
-          <p>Produzione musicale, post-produzione, audio per podcast, contenuti
+          <p>produzione musicale, post-produzione, audio per podcast, contenuti
             brandizzati, soluzioni di alta qualità con grande attenzione ai
             dettagli</p>
         </article>
@@ -92,14 +92,14 @@
 
               src="images/thumbs/05.jpg" alt=""></a>
           <h2>STRUMENTI IN CAMPO</h2>
-          <p>Strumentazione ibrida/organica, che include pianoforte, archi,
+          <p>strumentazione ibrida/organica, che include pianoforte, archi,
             chitarre, flauti, percussioni, pop sampling, hooks e grooves</p>
         </article>
         <article> <a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg"
 
               alt=""></a>
           <h2>VERSATILITA'</h2>
-          <p>Sonorità ibride, che fondono elementi acustici e digitali per
+          <p>sonorità ibride, che fondono elementi acustici e digitali per
             creare blend immersivi, profondità cinematografiche o tensioni
             minimaliste</p>
         </article>
@@ -107,7 +107,7 @@
 
               alt=""></a>
           <h2>LA CRESCITA DEL TUO PROGETTO</h2>
-          <p>Composizioni che risuonano con il messaggio visivo, con approccio
+          <p>composizioni che risuonano con il messaggio visivo, con approccio
             adattabile, emotivamente focalizzato, in linea con la tua prossima
             produzione</p>
         </article>
@@ -115,14 +115,14 @@
 
               alt=""></a>
           <h2>SERVIZI</h2>
-          <p>Offriamo capacità interne per piccole sessioni di registrazione e
+          <p>offriamo capacità interne per piccole sessioni di registrazione e
             servizi di editing, mixaggio e mastering</p>
         </article>
         <article> <a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg"
 
               alt=""></a>
           <h2>PUNTI DI FORZA</h2>
-          <p>Ritmi moderni, sound design accessibile per puntare all'identità
+          <p>ritmi moderni, sound design accessibile per puntare all'identità
             del marchio o la chiarezza narrativa, un'emozione acustica calda o
             un'energia pop brillante e coinvolgente</p>
         </article>
@@ -130,21 +130,21 @@
 
               alt=""></a>
           <h2>MUSICA / VISIONE / EMOZIONE</h2>
-          <p>Musica d'atmosfera, ideale per sottolineare l'emozione, lo spazio e
+          <p>musica d'atmosfera, ideale per sottolineare l'emozione, lo spazio e
             la sottile tensione</p>
         </article>
         <article> <a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg"
 
               alt=""></a>
           <h2>PUBBLICITA' / BRANDING</h2>
-          <p>C'è spazio per qualsiasi tipo di idea ed esigenza sonora, inclusi
+          <p>c'è spazio per qualsiasi tipo di idea ed esigenza sonora, inclusi
             jingle e audio dedicati</p>
         </article>
         <article> <a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg"
 
               alt=""></a>
           <h2>MUSICA AMBIENT</h2>
-          <p>Paesaggi sonori elettronici, synth profondi e strutturati, grooves,
+          <p>paesaggi sonori elettronici, synth profondi e strutturati, grooves,
             tunes sperimentali e catture ambientali</p>
         </article>
         <article> <a class="thumbnail" href="images/fulls/13.jpg"><img src="images/thumbs/13.jpg"
@@ -168,7 +168,7 @@
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
           <h2 style="color:Lightgreen; text-align: center;">@udioYlem</h2>
-          <p style="text-align: center;">Colonna sonora Docu-Film:</p>
+          <p style="text-align: center;">colonna sonora Docu-Film:</p>
           <h2 style="text-align: center;">UN NEMICO INVISIBILE</h2>
           <p style="text-align: center;">(Regia: Riccardo Campagna, Federico
             Savonitto / Music: Renzo Fanutti, Paolo Corberi, Mirko Cisilino)</p>
@@ -203,7 +203,7 @@
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
-          <h2 style="color:Lightblue; text-align: center;">Obiettivo qualità,
+          <h2 style="color:Lightblue; text-align: center;">obiettivo qualità,
             costi accessibili ed offerte personalizzate</h2>
           <p style="text-align: center;"></p>
           <p style="text-align: center;"></p>
