--- a/ita_index.html
+++ b/ita_index.html
@@ -220,7 +220,7 @@
           <p></p>
           <p></p>
           <ul class="icons" style="text-align: center;">
-            <li><a href="player.html" class="icon fa-play-circle" title="player"
+            <li><a href="ita_player.html" class="icon fa-play-circle" title="player"
 
                 style="text-align: center;">
                 <p style="text-align: center;">ascolta</p>
