--- a/ita_index.html
+++ b/ita_index.html
@@ -29,7 +29,7 @@
                 style="width: 47,5px; height: 25px;"></span></a></div>
         <p></p>
         <h2></h2>
-        <div id="image02" class="image"><a href="ita_index.html" title="clicca per italiano"><span
+        <div id="image02" class="image"><a href="ita_index.html" title="click for english"><span
 
               class="frame"><img src="images/audioylem_title.png?v=3b974a63" alt=""
 
