--- a/ita_index.html
+++ b/ita_index.html
@@ -29,11 +29,9 @@
                 style="width: 47,5px; height: 25px;"></span></a></div>
         <p></p>
         <h2></h2>
-        <div id="image02" class="image"><a href="ita_index.html" title="click for english"><span
+        <div id="image02" class="image"><span class="frame"><img src="images/audioylem_title.png?v=3b974a63"
 
-              class="frame"><img src="images/audioylem_title.png?v=3b974a63" alt=""
-
-                style="height: 77px; width: 221px;"></span></a></div>
+              alt="" style="height: 77px; width: 221px;"></span></div>
         <h1><span style="font-family: monospace;">Music<br>
           </span></h1>
         <p>MUSICA / AUDIO / PARLATO / AMBIENT / SOUNDTRACKS / EDITING E
