--- a/player.html
+++ b/player.html
@@ -23,7 +23,9 @@ body {
     <span></span>
     <script src="https://static.elfsight.com/platform/platform.js" async=""></script>
     <div class="elfsight-app-e6840901-4c52-48e1-9d18-c3e551678a00" data-elfsight-app-lazy=""></div>
-    <h2 style="color: Lightblue; text-align: center;">@udioYlem </h2>
+    <div id="image02" class="image" style="text-align: center;"><span class="frame"><img src="images/audioylem_title.png?v=3b974a63"
+
+              alt="" style="height: 77px; width: 221px;"></span></div>
     <div style="text-align: center;"><a href="index.html" title="HOME"><img src="images/blue_re-pict-house-base.png_64.png"
 
           alt="home" style="width: 50px; height: 50px;"></a> </div>
