--- a/ita_index.html
+++ b/ita_index.html
@@ -226,7 +226,7 @@
             <li><a href="mailto:renzofanutti@gmail.com" class="icon fa-envelope"
 
                 title="contact us" style="text-align: center;">
-                <p style="text-align: center;">contact</p>
+                <p style="text-align: center;">contatto</p>
                 <span class="label">email</span></a></li>
           </ul>
         </article>
